--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
 	width: 91vw;
 }
 
+.card .body button{
+	padding: 0.5rem 1rem;
+	margin: 0 0.2rem .5rem 0;
+}
+
 
 .description {
 	height: 8.3rem;
