--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
+/*
+Mobile
 
+Card style
+*/
 .card-container {
 	align-content: flex-start;
 }
@@ -25,28 +29,35 @@
 .description {
 	height: 8.3rem;
 }
-
+/* Login styles */
 #login-form {
 	display: none;
-	position: absolute;
+	position: fixed;
 	background-color: white;
 	padding: 1rem;
-	bottom: 2rem;
+	bottom: 4rem;
+	border-radius: 0.2em;
+	box-shadow: 2px 2px 2px #0404044d;
+}
+
+#loginError {
+	display: none;
 }
 
 #loginBtn{
-
+	padding: 0.5em;
+	background-color: #0366EE;
+	color: white;
+	border-radius: 0.2em;
+	bottom: 1em;
+	position: fixed;
 }
 
 .header-title{
 	flex: 1 1;
 }
 
-.footer{
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-}
+
 
 @media all and (min-width: 560px) {
 .card {
