--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ Card style
 	bottom: 4rem;
 	border-radius: 0.2em;
 	box-shadow: 2px 2px 2px #0404044d;
+	width: 91vw;
 }
 
 #loginError {
@@ -50,14 +51,16 @@ Card style
 	color: white;
 	border-radius: 0.2em;
 	bottom: 1em;
-	position: fixed;
 }
 
 .header-title{
 	flex: 1 1;
 }
 
-
+.footer{
+	height: 6vw;
+	padding: 1em;
+}
 
 @media all and (min-width: 560px) {
 .card {
@@ -88,9 +91,14 @@ Card style
 	max-height: 30vw;
 }
 
+#login-form {
+	width: 34vw;
+}
+
 }
 
 @media all and (min-width: 1280px) {
+
 
 .header-title{
 	flex: 3 1;
@@ -105,6 +113,10 @@ Card style
 .card img {
 	max-width: 100%;
 	max-height: 21vw;
+}
+
+#login-form {
+	width: 24vw;
 }
 
 }
