--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ Card style
 .card{
 	flex: 1 1;
 	max-width: 100%;
+	margin-bottom: 1rem;
 }
 
 .card img {
@@ -18,6 +19,7 @@ Card style
 
 .card .body {
 	width: 91vw;
+	white-space: pre-wrap;
 }
 
 .card .body button{
@@ -25,6 +27,9 @@ Card style
 	margin: 0 0.2rem .5rem 0;
 }
 
+.gitLink{
+	padding-left: 2vw;
+}
 
 .description {
 	height: 8.3rem;
@@ -117,6 +122,7 @@ Card style
 
 #login-form {
 	width: 24vw;
+	bottom: 6vw;
 }
 
 }
